fix issue related to overflow in chart selector

--- a/src/app/shared/chart-selector/chart-selector.component.scss
+++ b/src/app/shared/chart-selector/chart-selector.component.scss
@@ -30,11 +30,14 @@
 
   .options {
     position: absolute;
+    max-height: 500px;
     background-color: $background;
     border-radius: 5px;
     box-shadow: inset -3px -3px 3px 0 rgb(0 35 148 / 20%), inset 3px 3px 3px 0 rgb(255 255 255 / 50%);
     font-size: 16px;
     font-weight: 500;
+    overflow-y: overlay;
+    overflow-x: hidden;
 
     .option {
       position: relative;
